# audio-labeller

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: animal-farm-project.json  animal-labels.json  animal-palette.json  export.csv
schemas/: label-palette.schema.json  labels.schema.json  project.schema.json
src/: CMakeLists.txt  main.cpp
src/app/: action_handler.cpp  action_handler.h  actions.h  app_state.cpp  app_state.h  audio_labelling_app.cpp  audio_labelling_app.h  colours.h
src/audio/: audio_engine.cpp  audio_engine.h
src/imgui_app/: CMakeLists.txt  imgui_app.cpp  imgui_app.h
src/model/: label.h  ordered_registry.h  project_model.cpp  project_model.h  types.h
src/views/: audio_view.cpp  audio_view.h  file_list_view.cpp  file_list_view.h  label_controls_view.cpp  label_controls_view.h  labels_view.cpp  labels_view.h  waveform_view.cpp  waveform_view.h
